--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,12 @@ dependencies:
   qr_flutter: ^4.1.0
   google_sign_in: ^6.2.1
   image_picker: ^1.0.7
+  google_places_flutter: ^2.0.6   # Autocomplete widget
+  geocoding: ^3.0.0
+  youtube_player_flutter: ^9.1.2
+  flutter_dotenv: ^5.0.2
+  flutter_inappwebview: ^6.0.0
+  flutter_secure_storage: ^9.2.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
