--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,12 +45,15 @@ dependencies:
   qr_flutter: ^4.1.0
   google_sign_in: ^6.2.1
   image_picker: ^1.0.7
+  file_picker: ^10.3.3
   google_places_flutter: ^2.0.6   # Autocomplete widget
   geocoding: ^3.0.0
   youtube_player_flutter: ^9.1.2
-  flutter_dotenv: ^5.0.2
+  flutter_dotenv: ^5.1.0
   flutter_inappwebview: ^6.0.0
   flutter_secure_storage: ^9.2.2
+  google_fonts: ^6.1.0
+  provider: ^6.0.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -81,10 +84,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
