--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   flutter_secure_storage: ^9.2.2
   google_fonts: ^6.1.0
   provider: ^6.0.5
+  firebase_core: ^3.6.0
+  firebase_messaging: ^15.1.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
