--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,8 @@ dependencies:
   provider: ^6.0.5
   firebase_core: ^3.6.0
   firebase_messaging: ^15.1.3
-
+  intl: ^0.20.2
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
