--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,7 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+# Keystore files (do NOT commit)
+key.properties
+*.jks
+*.keystore
