--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
   flutter_inappwebview: ^6.0.0
   flutter_secure_storage: ^9.2.2
   google_fonts: ^6.1.0
-  provider: ^6.0.5
+  flutter_riverpod: ^2.5.1
   firebase_core: ^3.6.0
   firebase_messaging: ^15.1.3
   intl: ^0.20.2
